# Realtime-3D-Graphics

./: .gitignore  CMakeLists.txt  README.md  appendix.md
Lab-1/: CMakeLists.txt
Lab-1/src/: main.cpp  rasterization.cpp  rasterization.h  shader.cpp  shader.h  utils.h
Lab-1/src/shaders/: point.frag
Lab-2/: CMakeLists.txt
Lab-2/src/: main.cpp  shader.cpp  shader.h  transformation.cpp  transformation.h
Lab-2/src/shaders/: point.frag  point.vert
Lab-3/: CMakeLists.txt
Lab-3/src/: main.cpp  mesh_simplification.h
Lab-3/src/shaders/: p3n3.vert
Lab-3/src/utils/: camera.cpp  camera.h  tools.h
Lab-3/src/utils/gl/: core.h  element_buffer.h  vertex_buffer.cpp
Lab-4/: .gitignore  CMakeLists.txt
Lab-4/src/: main.cpp
Lab-4/src/shaders/: light_shadow.frag
Lab-4/src/utils/: camera.h  model.cpp  model.h  shader.h  tools.h  transform.cpp  transform.h
Lab-4/src/utils/gl/: buffer.cpp  buffer.h  core.h  frame_buffer.h  texture.h  vertex_array.h
rasterization/: CMakeLists.txt
rasterization/src/: main.cpp  rasterization.h  shader.h  utils.cpp  utils.h
rasterization/src/shaders/: point.vert
src/: main.cpp  mesh_simplification.cpp
src/raytracing/: aabb.cpp  aabb.h  camera.cpp  camera.h  hit.cpp  hit.h  material.h  ray.h  record.h  texture.cpp  texture.h
src/shaders/: border.frag  display.frag  display.vert  light.frag  light_shadow.frag
src/utils/: camera.cpp  camera.h  image.cpp  image.h  model.cpp  model.h  shader.cpp  shader.h  tools.cpp  tools.h  transform.cpp  transform.h
src/utils/gl/: buffer.h  core.h  element_buffer.cpp  element_buffer.h  frame_buffer.cpp  frame_buffer.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h  vertex_buffer.h
testsuite/: CMakeLists.txt
testsuite/src/: main.cpp
testsuite/testcases/: ellipse0  ellipse1  ellipse2  ellipse3  line0  line1  line2  line3  line4  line5  line6  line7  line8  line9
